fix bugs (whitespace on box rotation)...

--- a/scss/_aside.scss
+++ b/scss/_aside.scss
@@ -1,7 +1,7 @@
 aside {
     width: 5vw;
+    min-width: 70px;
     height: 100vh;
-    min-width: 40px;
     border-right: 2px solid #333;
     display: flex;
     flex-direction: column;
@@ -24,6 +24,7 @@ aside {
     width: 100%;
     height: 5vh;
     border: 1px solid #000000;
+    border-right: 0px;
     letter-spacing: 0.01rem;
     transition: background-color 250ms;
 
