--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,12 +33,15 @@ main {
 }
 
 .mode-msg {
-    font-size: 3rem;
+    font-size: 4rem;
     position: absolute;
     z-index: -1;
     opacity: 1;
-    top: 45%;
-    left: 45%;
+    position: absolute;
+    // center element
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     text-transform: uppercase;
     transition: opacity 1250ms;
 }
@@ -46,6 +49,7 @@ main {
 // change display because of unwanted gaps caused by transform: rotate...
 .box {
     display: block;
+    margin: -1px;
 }
 
 // mode classes
